--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^12.20.25",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.4",
     "esbuild-wasm": "^0.12.28",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
