--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.25",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-resizable": "^1.7.3",
     "axios": "^0.21.4",
     "esbuild-wasm": "^0.13.0",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
