--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/node": "^12.20.25",
 		"@types/react": "^17.0.21",
 		"@types/react-dom": "^17.0.9",
+		"@types/react-redux": "^7.1.18",
 		"@types/react-resizable": "^1.7.3",
 		"@uiw/react-md-editor": "^3.6.4",
 		"axios": "^0.21.4",
@@ -21,8 +22,11 @@
 		"prettier": "^2.4.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.5",
 		"react-resizable": "^3.0.4",
 		"react-scripts": "4.0.3",
+		"redux": "^4.1.1",
+		"redux-thunk": "^2.3.0",
 		"typescript": "^4.4.3",
 		"web-vitals": "^1.1.2"
 	},
