--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
 		"@monaco-editor/react": "^4.2.2",
+		"@reduxjs/toolkit": "^1.6.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -28,6 +29,7 @@
 		"redux": "^4.1.1",
 		"redux-thunk": "^2.3.0",
 		"typescript": "^4.4.3",
+		"uuid": "^8.3.2",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
@@ -47,5 +49,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/uuid": "^8.3.1"
 	}
 }
