--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^4.12.3",
 		"@monaco-editor/react": "^4.2.2",
-		"@reduxjs/toolkit": "^1.6.1",
+		"@mui/icons-material": "^5.0.1",
+		"@mui/material": "^5.0.2",
+		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
